<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ComplexScreenControls</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="which_instrument">Which instrument do you want to learn to play?</string>
    <string name="accordion">Accordion</string>
    <string name="bassoon">Bassoon</string>
    <string name="cello">Cello</string>
    <string name="submit">Submit</string>

</resources>
